--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@ body {
     margin: 0;
     padding: 0;
 }
+
+ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.option {
+    background-color: yellow;
+}
+
+.channelName {
+}
